--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@stellar/freighter-api": "^5.0.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "stellar-sdk": "^13.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
